# API-Testing

./: .gitignore  build.sh  checkschema.py  conda-env.yaml  deploy_frontend_to_heroku.sh  init_load_env.sh  main.py  run_all.sh  setup.sh  stop_all.sh
frontend/: .dockerignore  .env.example  .gitignore  AI_WORKFLOW_README.md  Dockerfile  LICENSE  Procfile  README-Docker-Dev.md  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  run.bat  run.sh
frontend/APIT/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
frontend/deploy/compose/: docker-compose.yml
frontend/deploy/scripts/: run.sh
frontend/locale/: .gitkeep
frontend/main/: admin.py  context_processors.py  decorators.py  models.py  urls.py  views.py
frontend/main/migrations/: 0001_testsuitereport.py  0002_useractivity_and_more.py
frontend/media/uploads/: Agent_Programmatic_Integration_Testing_Project.docx  FA25AI1803_Agent_Programmatic_Integration_Testing_ThongHV4.docx
frontend/project/: forms.py  models.py  urls.py  views.py
frontend/project/migrations/: 0001_initial.py  0001_initial_squashed_0009_functionalrequirement.py  0002_userproject_project_use_uuid_d642a6_idx.py  0003_projectdocument.py  0004_projectdocument_ai_error_message_and_more.py  0005_projectdocument_api_collection_and_more.py  0006_projectdocument_file_id.py  0007_projectdocument_original_filename.py  0010_generatedtestcase.py  (+4 more)
frontend/test_suite/: models.py  urls.py  views.py
frontend/testcase_history/: apps.py  models.py  urls.py  views.py
frontend/user/: tokens.py  urls.py  views.py
(+238 files in other folders)
