[project]
name = "API-Testing"
version = "0.1.0"
description = "User Service for APIT Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.9.1",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.2",
    "django==5.2.4",
    "gunicorn==23.0.0",
    "idna==3.10",
    "packaging==25.0",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "six>=1.17.0",
    "sqlparse==0.5.3",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]
